--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,21 @@
   </head>
   <body>
     <div id="root">
-      <h1>Hola mundo!</h1>
+      <h1>César diaries</h1>
     </div>
+
+    <div>
+      <button id = 'entrar'>Entrar</button>
+    </div>
+    <br>
+    <br>
+
+    <div>
+        <textarea name="textarea" rows="10" cols="50">Escribe tu mensaje</textarea>
+    </div>
+
+
+
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
