Test aprobados y eventos funcionando

--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,19 @@
     <input type="text" name="codificar" id="codificar" placeholder="Escribe tu mensaje" title="escribe tu mensaje">
     <br>
     <br>
-        <p>Clave: <input id = "clave" type: "numero" name:"Clave"></p>
-        <button id = "encrip">Codificar</button>
-        <button id = "crypto">Decodificar</button>
+        <input id = "clave" type= "number" placeholder="Ej. 1" title= "Clave" name="Clave">
+        <button id = "btnencrip">Codificar</button>
+        <button id = "btncrypto">Decodificar</button>
         <br>
         <br>
-      <input type="text" name="decodificar" id="decodificar" placeholder="Lee tu mensaje" title="lee tu mensaje">
+        <input type="text" name="decodificar" id="resultado"  placeholder="Lee tu mensaje" title="lee tu mensaje">
         <br>
         <br>
         <button id = "enviar">Enviar</button>
-        <button type ="reset" id= "limpiar" value="limpiar">Limpiar</button>
+        <button type ="reset" id= "limpiar" value="borrar">Limpiar</button>
      </div>
+
+    
 
     <script src="cipher.js"></script>
     <script src="index.js"></script>
