--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
                 3. Selecciona la opción de tu preferencia.
                 <br>
                 4.Envía.
+                ¡Recuerda escribir el número de la llave para decifrar!
                </p>
             </div>
     </aside>
